web/app/themes/ppj/src/sass/landing-page.sass
@import 'colors'

$color-main: $color-1
$color-tertiary: $color-2

@import 'main'

.landing-page-groups
  $lpg: &
  margin: 0 auto
  max-width: 48rem
  padding: 0 $common-spacing

  @include bp('portrait')
    margin: 0 auto
    max-width: initial
    padding: 0 4.8rem

  @include bp('landscape')
    padding: 0 7.8rem

  &__group
    margin-top: $common-spacing * 2

  &__group-title-container
    display: flex
    margin-bottom: $common-spacing
    position: relative

    &:before
      background-color: $color-light
      content: ' '
      display: block
      height: .2rem
      left: 0
      position: absolute
      right: 0
      top: 50%

  &__group-title
    background: $color-white
    display: block
    font-size: 2.2rem
    line-height: 2.6rem
    margin-bottom: 0
    margin-top: 0
    padding-right: $common-spacing / 2
    z-index: 1

    @include bp('portrait')
      font-size: 3rem
      line-height: 3.6rem
      margin-left: auto
      margin-right: auto
      padding: .5em
      text-align: center

    @include bp('landscape')
      font-size: 3.8rem
      line-height: 4.6rem

    @include bp('large')
      font-size: 4.4rem
      line-height: 5rem

  &__card-row
    $cr: &
    display: flex
    flex-direction: column
    align-items: stretch

    @include bp('portrait')
      align-items: stretch
      flex-direction: row
      justify-content: center
      flex-wrap: wrap
      padding: 0 8rem

    @include bp('landscape')
      padding: 0 11rem

  &__card
    $c: &
    display: flex
    flex-direction: column
    font-size: 1.6rem
    line-height: 2.2rem
    padding: 0 $common-spacing $common-spacing * 2

    @include bp('portrait')
      width: 50%

    @include bp('landscape')
      font-size: 1.8rem
      line-height: 2.4rem

    @include bp('large')
      font-size: 2.4rem
      line-height: 3.2rem

    &:last-child
      @include bp('portrait')
        margin-right: auto

    &--has-image
      padding-top: 0

      & #{$lpg}__card-title
        border-top: none
        padding-top: 0

    &-image-container
      margin: 0 0 $common-spacing
      position: relative
      width: 100%

      #{$c}--color-one &
        border-bottom: solid $common-spacing $color-1

      #{$c}--color-two &
        border-bottom: solid $common-spacing $color-2

      #{$c}--color-three &
        border-bottom: solid $common-spacing $color-3

      #{$c}--color-four &
        border-bottom: solid $common-spacing $color-4

    &-image-ratio-container
      padding-bottom: percentage(9/16)
      height: 0

    &-image-ratio
      position: absolute
      bottom: 0
      left: 0
      right: 0
      top: 0

    &-image
      height: 100%
      width: 100%

  &__card-title
    border-top: solid $common-spacing $color-dark
    font-size: 2.2rem
    padding-top: 1.6rem

    @include bp('large')
      font-size: 3.2rem

  &__card-cta-link
    @extend .cta-link

    background-color: $color-white
    border: .2rem solid $color-dark
    color: $color-dark
    font-size: 2rem
    margin-top: auto
    width: 100%

    @include bp('portrait')

    @include bp('landscape')
      font-size: 2.4rem

    @include bp('large')
      font-size: 2.8rem

